--- a/manga_db/webGUI/templates/book.html
+++ b/manga_db/webGUI/templates/book.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<div id="rootContainer" class="container-fluid">
+<div class="container container-fluid">
 {% block additional_messages %}{% endblock %}
 {% if book %}
-<div class="book-page-container">
+<div class="show-book-container">
 {% block book_info %}
 {% endblock %}
 </div> {# book-page-container #}
