--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -39,7 +39,7 @@
         }
     });
 </script>
-<nav class="navbar navbar-expand mdb-nav dgrey-color">
+<nav class="navbar navbar-expand mdb-nav dark-color">
     <a class="mdb-navbar-brand" href="#">MangaDB</a>
 
     <form action="{{ url_for('main.search_books') }}" method=get class="search-form">
